--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ rvm:
 	- 1.9.2
   - 1.8.7
   - ree
-script: 
+before_script: 
 	- "cp spec/mongoid.yml.forci spec/mongoid.yml"
   - "cp spec/redis.yml.forci spec/redis.yml"
-  - "bundle exec rspec spec"
 
