--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-rvm: 
-  - 1.9.2
-  - 1.8.7
-  - ree
+rvm: 1.9.2
 before_script: 
   - "cp spec/mongoid.yml.forci spec/mongoid.yml"
   - "cp spec/redis.yml.forci spec/redis.yml"
