--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-rvm: 1.9.2
-before_script:
-  - "cp spec/redis.yml.forci spec/redis.yml"
-
+rvm: 
+ - 1.8.7
+ - ree
+ - 1.9.2
+ - 1.9.3
+ - ruby-head
+services:
+ - redis-server
