ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-*.gem
-
+.bundle
+tmp/
+coverage/
+db/*.sqlite3
+tmp/
+log/*.log
+log/*.log*
+tmp/**/*
+.sass-cache/
+public/assets/
+config/database.yml
+config/mongoid.yml
+config/config.yml
+config/thin.yml
+config/redis.yml
+config/mailer_daemon.yml
+config/secrets.yml
+public/uploads/**/*
+public/topics
+public/topics/**/*
+.redcar
+.DS_Store
+*.swp
+*.swo
+.rvmrc
+vendor/ruby
+doc/wiki_repo
+solr/data/
+solr/pids/
+bin/
+tags
+chromedriver.log
