--- a/spec/mongoid.yml
+++ b/spec/mongoid.yml
@@ -1,6 +1,6 @@
 production:
-  sessions:
+  clients:
     default:
       hosts:
         - 127.0.0.1:27017
-      database: mongoid
+      database: redis-search
